# Doquanta

./: .gitignore  CLAUDE.md  CloudNativeREADME.md  Constitution.md  GIT.md  HACKATHON_II_STATUS_SUMMARY.md  Hackathon II - Todo Spec-Driven Development.md  Hackthon.md  PHASE_5_ADVANCED_CLOUD_DEPLOYMENT.md  PHASE_5_FINAL_COMPLETION_CHECK.md  PHASE_COMPLETION_CERTIFICATION.md  Phase-2.md  README.md  check_db.py  check_tasks.py  comprehensive_mcp_test.py  debug_datetime.py  docker-compose.yml  migrate_sqlite_better_auth.py  migration.Dockerfile  phase2check.md  recreate_auth_tables.py  setup_sqlite.py  test_enhanced_features.py  test_mcp_pattern.py  test_mcp_server.py  test_services_only.py  verce.md
todo-backend/: .env  .env.example  Dockerfile  README.md  celery_config.py  create_better_auth_tables.py  create_realistic_session.py  docker-compose.yml  fix_better_auth_timestamps.py  fix_session_table.py  fix_task_id_type.py  main.py  migrate_db.py  production_migration.py  pyproject.toml  requirements.txt  simple_main.py  startup.sh  startup_debug.py  tasks.json  test_functionality.py  test_gemini.py  test_gemini_config.py  test_session_insert.py  todo.db
todo-backend/src/: dapr_integration.py  kafka_producer.py  main.py
todo-backend/src/api/: ai_chat.py  chat.py  notifications.py  tasks.py  websocket.py
todo-backend/src/chatbot/: mcp_server.py
todo-backend/src/core/: security.py  settings.py
todo-backend/src/db/: session.py
todo-backend/src/models/: models.py
todo-backend/src/services/: ai_service.py  category_detector.py  date_time_parser.py  (+2 more)
(+434 files in other folders)
